welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:1: error: not found: value Direction
setDirection(Direction.Est)
             ^DwarfCode:6: error: not found: value Direction
setDirection(Direction.WEST)
             ^