welcome.lessons.welcome.summative.Moria.scala.code
setDirection(Direction.Est)
while (!estSurBiscuit){
  avance()
}
prendBiscuit()
setDirection(Direction.WEST)
while (!estSurBiscuit){
  avance()
}
recule()
poseBiscuit()
